package behavioral.stratery.duck_65cntt;

public class FlyNoWay implements IFlyBehavior{
    @java.lang.Override
    public String fly() {
        return "Toi khong the bay";
    }
}
