package behavioral.stratery.duck_65cntt;

public interface IFlyBehavior {
    String fly();
}
