package behavioral.stratery.duck_65cntt;

public interface IQuackBehavior {
    String quack();
}
