package behavioral.stratery.duck_65cntt;

public class SQuack implements IQuackBehavior{
    @Override
    public String quack() {
        return "quack quack quack";
    }
}
